# libSocket

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakeCPack.cmake  Config.cmake.in  build_flags.cmake  cmake_flags.cmake  config.cmake.in  config.h.in  cpack_.cmake  cpack_archive.cmake  cpack_deb.cmake  cpack_nsis.cmake  cpack_rpm.cmake  dependencies.cmake  dependencies.cmake.in  gen_files.cmake  googletest-download.cmake  googletest.cmake  install.cmake  strip_symboles.cmake  version.cpp.in  version.h.in
docs/: CMakeLists.txt  front_page.md
src/: CMakeLists.txt  _endian.h  platform.h  poll.h  socket.cpp  socket.h  socket_addr.cpp  socket_addr.h  socket_portability.h  socketdgram.cpp  socketdgram.h  socketstream.cpp  socketstream.h
src/libSocket/: CMakeLists.txt  _endian.h  poll.h  socket.cpp  socket.h  socket_addr.cpp  socket_addr.h  socket_portability.h  socketdgram.cpp  socketdgram.h  socketstream.cpp  socketstream.h
tests/: CMakeLists.txt  broadcast.cpp  extern.h  main.cpp  multicast.cpp  raw.cpp  socketDGRAM.cpp  socketSTREAM.cpp  tcp.cpp  udp.cpp
